Fix too long delay when hiding offline alert

--- a/style.css
+++ b/style.css
@@ -732,13 +732,3 @@ input[type='text']{
     color: gray;
     text-align: center;
 }
-
-
-
-
-
-#update-info {
-    font-size: xx-small;
-    color: gray;
-    text-align: center;
-}
